update Triva hw

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           Start!  
         </button>
           <div class="timeDiv">
+            You have 30 seconds per question. Are you ready? Then click START!
           </div>
           <div class="questionDiv">
           </div>
